[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/assets/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/assets/tileset.png" type="Texture" id=2]
[ext_resource path="res://ui/pause menu/pause_menu.gd" type="Script" id=3]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="Pause" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.705882 )

[node name="NinePatchRect" type="NinePatchRect" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 9.0
margin_right = -8.0
margin_bottom = -8.0
texture = ExtResource( 2 )
region_rect = Rect2( 0, 8, 8, 8 )
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="Label" type="Label" parent="Pause/NinePatchRect"]
anchor_right = 1.0
margin_top = -1.0
margin_bottom = 6.0
text = "Paused"
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Pause/NinePatchRect"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -25.0
margin_right = -2.0
margin_bottom = -15.0

[node name="Button3" type="Button" parent="Pause/NinePatchRect/HBoxContainer2"]
margin_right = 38.0
margin_bottom = 10.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Resume"

[node name="CheckButton" type="CheckButton" parent="Pause/NinePatchRect/HBoxContainer2"]
margin_left = 42.0
margin_right = 80.0
margin_bottom = 10.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Buttons"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Pause/NinePatchRect"]
anchor_top = 0.526
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 4.012
margin_right = -2.0
margin_bottom = -2.0

[node name="Button" type="Button" parent="Pause/NinePatchRect/HBoxContainer"]
margin_right = 38.0
margin_bottom = 12.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
text = "Reset"

[node name="Button2" type="Button" parent="Pause/NinePatchRect/HBoxContainer"]
margin_left = 42.0
margin_right = 80.0
margin_bottom = 12.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Exit"

[connection signal="pressed" from="Pause/NinePatchRect/HBoxContainer2/Button3" to="Pause" method="_on_Button3_pressed"]
[connection signal="toggled" from="Pause/NinePatchRect/HBoxContainer2/CheckButton" to="Pause" method="_on_CheckButton_toggled"]
[connection signal="pressed" from="Pause/NinePatchRect/HBoxContainer/Button" to="Pause" method="_on_Button_pressed"]
[connection signal="pressed" from="Pause/NinePatchRect/HBoxContainer/Button2" to="Pause" method="_on_Button2_pressed"]
